src/test/deca/syntax/valid/arithmetic-basic-operations.deca
// Description:
//    Programme utilisant 2 variables et manipulants les opérations classiques
//
// Resultats:
//
//   -5-1
//
//
// Historique:
//    cree le 11/01/2024

{
    int a = 2;
    int b;
    a = (3 + -2)*-17 + 12;
    b = a%3 +6/5;

    print(a);
    print(b);
}