src/test/deca/syntax/invalid/printOpenedOnTheLeft.deca
// Description:
//    Paranthèse du print ouverte
//
// Resultats:
//    missing '(' at '"Sasuke Uchiwa"'


//
// Historique:
//    cree le 11/01/2024


{

println"Sasuke Uchiwa");

}